--- a/product-manager.html
+++ b/product-manager.html
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://docsapp.recruiterbox.com/jobs/fk036bo/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://docsapp.recruiterbox.com/jobs/fk036bo/'>
     Product Manager-Growth at DocsApp
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -179,7 +179,7 @@ Services.</p>
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lumere.applytojob.com/apply/nUt3uMKTH2/Product-Manager'>Product Manager - Lumere - Career Page</a></h5> 
+<h5><a href='https://lumere.applytojob.com/apply/nUt3uMKTH2/Product-Manager'>Product Manager - Lumere - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply to Product Manager at Lumere in Chicago, IL.</p>
 <hr/>
@@ -206,7 +206,7 @@ Manager to join our Product team in our San Francisco office. WHAT WE OFFER
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://generali-global-health-services.workable.com/j/D5C3D0A5AB'>Generali Global Health Services - Jobs: Product Owner - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://generali-global-health-services.workable.com/j/D5C3D0A5AB'>Generali Global Health Services - Jobs: Product Owner - Apply online</a></h5> 
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -274,7 +274,7 @@ this position has been closed due to changes in the recruiting system. But you?.
 <p>4 days ago ... Working closely with your Product Analyst, BA, UX designer and developers to 
 design solutions to our customer problems. Create high level user stories that?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eurostar.workable.com/jobs/1085509'>Product Owner - Apply online - Eurostar - Jobs</a></h5> 
+<h5><a href='https://eurostar.workable.com/jobs/1085509'>Product Owner - Apply online - Eurostar - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Working closely with your Product Analyst, BA, UX designer and developers to 
 design solutions to our customer problems. Create user stories that communicate
@@ -292,7 +292,7 @@ design solutions to our customer problems. Create user stories that communicate
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/jbs/job/o1wDafw4'> JBS USA Careers - 2ND SHIFT PRODUCT MANAGER</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/jbs/job/o1wDafw4'> JBS USA Careers - 2ND SHIFT PRODUCT MANAGER</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -323,7 +323,7 @@ closely with internal and external cross-functional stakeholders, you will ident
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/flowspace/ca4ac08a-a51e-4615-a3e0-09a73c05bac2'>Flowspace - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/flowspace/ca4ac08a-a51e-4615-a3e0-09a73c05bac2'>Flowspace - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -353,7 +353,7 @@ closely with internal and external cross-functional stakeholders, you will ident
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://engineerai.workable.com/j/40E0A807F0'>Engineer.ai - What would you Build? - Jobs: Technical Product Manager - Apply online</a></h5> 
+<h5><a href='https://engineerai.workable.com/j/40E0A807F0'>Engineer.ai - What would you Build? - Jobs: Technical Product Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
