--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -44,7 +44,7 @@
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/udemy/26cec5ef-aadc-4151-b95f-3ca4f8489e16'>Udemy - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/udemy/26cec5ef-aadc-4151-b95f-3ca4f8489e16'>Udemy - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -69,7 +69,7 @@
 <p>4 days ago ... 111 W Washington Suite 2100, Chicago, IL 60602 is now hiring a Sr. Cassandra 
 Site Reliability Engineer in Chicago, Illinois. Review all of the job details and?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs-nuance.icims.com/jobs/40079/principal-site-reliability-engineer--architect/job?ss=1&mode=job&iis=BuiltInBoston&iisn=BuiltInBoston'>Principal Site Reliability Engineer/ Architect in Burlington ...</a></h5> 
+<h5><a href='https://jobs-nuance.icims.com/jobs/40079/principal-site-reliability-engineer--architect/job?ss=1&mode=job&iis=BuiltInBoston&iisn=BuiltInBoston'>Principal Site Reliability Engineer/ Architect in Burlington ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... US is now hiring a Principal Site Reliability Engineer/ Architect in Burlington, 
 Massachusetts. Review all of the job details and apply today!</p>
@@ -139,7 +139,7 @@ preferred); Experience with automating systems and infrastructure via Ansible,?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://digitalassetsdatainc.recruitee.com/o/infrastructuredevopssite-reliability-engineer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://digitalassetsdatainc.recruitee.com/o/infrastructuredevopssite-reliability-engineer'>
       Infrastructure/DevOps/Site Reliability Engineer - Digital Assets Data, Inc.
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -258,7 +258,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/quizlet-2/2b95e966-8076-43c9-bfdc-403613fe6a66'>Quizlet - Site Reliability Engineer - Denver, CO</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quizlet-2/2b95e966-8076-43c9-bfdc-403613fe6a66'>Quizlet - Site Reliability Engineer - Denver, CO</a></h5> 
 <p><span class="badge badge-light">Denver Denver Denver</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -314,7 +314,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999691988371-senior-site-reliability-engineer'>Prospect Infosys Inc. Senior Site Reliability Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999691988371-senior-site-reliability-engineer'>Prospect Infosys Inc. Senior Site Reliability Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -376,7 +376,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/oodlefinance/jobs/4351849002'>Job Application for Site Reliability Engineer at Oodle Finance</a></h5> 
+<h5><a href='https://boards.greenhouse.io/oodlefinance/jobs/4351849002'>Job Application for Site Reliability Engineer at Oodle Finance</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
